# task_manager

./: .sample.env  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 14fbbd0ea60e_user_table_init.py  3bcab4a7ce4d_initial.py  92f72fc7ec0d_task_table_init.py  a4fa866af16f_add_relationship_between_user_and_task.py  dfc936330542_changed_lazy_load_in_user.py
src/: Dockerfile  main.py
src/auth/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  security.py  service.py
src/core/: config.py  db.py  dependencies.py  repository.py  utils.py
src/tasks/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/websocket/: router.py  utils.py
tests/: conftest.py  test_auth.py  test_tasks.py
